@@ -1,3 +1,9 @@
+Fri Jan 26 00:37:23 1996  Sam Hartman  <hartmans@tertius.mit.edu>
+
+	* krlogin.c (endif
+): 
+(reader):  Deal with exceptions even while writing.
+
 Wed Jan 24 00:34:42 1996  Sam Hartman  <hartmans@tertius.mit.edu>
 
 	* krlogind.M krshd.M: Update to document new options.
